@@ -52,40 +52,40 @@ notrans_man3_MANS = \
 	elftc_symbol_table_to_image.3
 
 elftc_bfd_target_byteorder.3: elftc_bfd_find_target.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_bfd_target_class.3: elftc_bfd_find_target.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_bfd_target_flavor.3: elftc_bfd_find_target.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_string_table_from_section.3: elftc_string_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_string_table_destroy.3: elftc_string_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_string_table_image.3: elftc_string_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_string_table_insert.3: elftc_string_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_string_table_lookup.3: elftc_string_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_symbol_table_create_nested.3: elftc_symbol_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_symbol_table_delete_name.3: elftc_symbol_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_symbol_table_delete_entry.3: elftc_symbol_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_symbol_table_destroy.3: elftc_symbol_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_symbol_table_from_section.3: elftc_symbol_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_symbol_table_insert.3: elftc_symbol_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_symbol_table_iterate.3: elftc_symbol_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_symbol_table_lookup.3: elftc_symbol_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 elftc_symbol_table_to_image.3: elftc_symbol_table_create.3
-	$(LN_S) $< $@
+	$(AM_V_GEN)$(LN_S) $< $@
 
 elftc_version.c: make-toolchain-version
-	${srcdir}/make-toolchain-version -t ${top_srcdir} -r ${RELEASE}
+	$(AM_V_GEN)${srcdir}/make-toolchain-version -t ${top_srcdir} -r ${RELEASE}
 
